# Matrix

./: CMakeLists.txt  install.sh
libmatrix/: basic.cpp  lu.cpp  lu.h  matrix.cpp  matrix.h  matrix_init.h  matrix_range.h  operation.cpp  rand.h
mats/: m17.txt
src/: main.cpp
test/: runme.test1
